# AI-Powered-JobHunt-Pro

./: .gitignore  AGENTS.md  CLAUDE.md  FRONTEND_BACKEND_DIAGNOSTICS.md  GENERATE_INITIAL_RECOMMENDATIONS.md  GET_FRESH_JOBS_THEN_RECOMMENDATIONS.md  JOB_SEARCH_GUIDE.md  MEMORY.md  NEXT_STEPS.md  PRE_COMPUTED_RECOMMENDATIONS_IMPLEMENTATION.md  PRODUCTION_AUDIT_REPORT.md  PROJECT_PLAN.md  QUICK_START_RECOMMENDATIONS.md  QUICK_START_SCHEDULER.md  README.md  README_SCHEDULER.md  RENDER_BUILD_FIXES.md  RENDER_DEPLOYMENT.md  SAVED_JOBS_FEATURE_IMPLEMENTATION.md  SESSION_SUMMARY.md  SUMMARY.md  VERCEL_404_FIX.md  docker-compose.yml
backend/: .env.example  ERROR_HANDLING_GUIDE.md  ERROR_HANDLING_QUICKSTART.md  SEEDING_GUIDE.md  check_database.py  cleanup_old_jobs.py  coverage.xml  fix_tests.py  generate_recommendations.py  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt  scrape_jobs_5days.py  scrape_jobs_ghana.py  scrape_jobs_now.py  scrape_jobs_test.py  seed_jobs.py  seed_jobs_improved.py  seed_jobs_simple.py  start_celery_beat.sh  start_celery_worker.sh
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  base.py  embeddings.py  reranker.py  router.py  usage_tracker.py
backend/app/models/: cv.py  (+11 more)
backend/scripts/: README.md  check_env.py  cleanup_old_jobs.py  cleanup_old_jobs.py.backup  daily_job_scraper.py  delete_tailored_cvs.py  run_scrape_and_recommend.py  seed_jobs_remoteok.py  setup_cron_jobs.sh
backend/tests/: README.md  conftest.py  test_ai_router.py  test_ats_job_sync_service.py  test_ats_sync_status_service.py  test_auth.py  test_cvs.py  test_cvs.py.bak  test_handoff_token.py  test_jobs.py  test_jobs.py.bak  test_periodic_tasks.py  test_production_hardening.py  test_profiles.py  test_profiles.py.bak  test_recommendations_v2.py  test_sanitizer.py  test_scraped_text.py  test_shared_auth_config.py  test_user_privacy.py  test_whatsapp_digest.py  test_whatsapp_phase4b.py  test_whatsapp_schema.py
(+291 files in other folders)
