[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-powered-jobhunt-pro-backend"
version = "1.0.0"
description = "AI-powered job hunting platform backend with pre-computed recommendations"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # FastAPI and Server
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",

    # Database
    "supabase>=2.25.1",
    "psycopg2-binary==2.9.10",
    "sqlalchemy>=2.0.0",

    # Scheduler
    "apscheduler>=3.10.0",

    # Environment and Config
    "python-dotenv",
    "celery",
    "pydantic>=2.11.7,<3.0",
    "pydantic-settings>=2.3.0",

    # AI Models
    "openai==1.3.0",
    "google-generativeai==0.3.0",
    "groq==0.3.0",
    "tiktoken==0.5.2",

    # Voice Services
    "elevenlabs==0.2.27",
    "deepgram-sdk==3.2.7",

    # File Processing
    "PyPDF2==3.0.1",
    "pdfplumber==0.10.3",
    "python-docx==1.1.0",
    "pypandoc==1.12",

    # Utilities
    "aiofiles==23.2.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # Logging and Monitoring
    "structlog==23.2.0",

    # HTTP Clients
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "httpx<0.28",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
